// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Header /> without throwing 1`] = `
Array [
  <b>
    
    :
</b>,
  " be on a",
  " ",
  " node as the instance(s) identified by the instance ",
  " ",
  "key “",
  "\\" and the instance tag value",
  " ",
  " ",
  "\\"",
  "”",
]
`;

exports[`renders <Header tag/> without throwing 1`] = `
Array [
  <b>
    
    :
</b>,
  " be on a",
  " ",
  " node as the instance(s) identified by the instance ",
  " ",
  "key “",
  "\\" and the instance tag value",
  " ",
  " ",
  "\\"",
  "”",
]
`;

exports[`renders <Rule/> without throwing 1`] = `
.c0 {
  margin-top: 0.5rem;
  margin-bottom: 2rem;
}

.c12 {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 4.125rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c7 {
  width: 5.625rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c10 {
  width: 7.5rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c2 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  display: inline-block;
}

.c3 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c13 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c13::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:invalid {
  box-shadow: none;
}

.c13:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c13:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  min-width: 18.75rem;
  width: auto;
  margin: 0 0.375rem;
  min-width: 0;
}

.c4:after {
  content: '';
  width: 0.625rem;
  height: 0.625rem;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iOSIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgOSA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjx0aXRsZT5hcnJvdzogcmlnaHQ8L3RpdGxlPjxwYXRoIGQ9Ik05IDEuMzg2TDcuNjQ4IDAgNC41IDMuMjI4IDEuMzUyIDAgMCAxLjM4NiA0LjUgNnoiIGZpbGw9IiM0OTQ5NDkiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==) center center no-repeat;
  display: block;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.75rem;
}

.c4:after {
  right: 0.375rem;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  min-width: 18.75rem;
  width: auto;
  margin: 0 0.375rem;
  min-width: 0;
  margin-left: 0;
}

.c9:after {
  content: '';
  width: 0.625rem;
  height: 0.625rem;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iOSIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgOSA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjx0aXRsZT5hcnJvdzogcmlnaHQ8L3RpdGxlPjxwYXRoIGQ9Ik05IDEuMzg2TDcuNjQ4IDAgNC41IDMuMjI4IDEuMzUyIDAgMCAxLjM4NiA0LjUgNnoiIGZpbGw9IiM0OTQ5NDkiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==) center center no-repeat;
  display: block;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.75rem;
}

.c9:after {
  right: 0.375rem;
}

.c6 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 4.125rem;
  max-width: 4.125rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:invalid {
  box-shadow: none;
}

.c6:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c6:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c8 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 5.625rem;
  max-width: 5.625rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c8::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:invalid {
  box-shadow: none;
}

.c8:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c8:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c11 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 7.5rem;
  max-width: 7.5rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c11::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:invalid {
  box-shadow: none;
}

.c11:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c11:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    wrap={true}
  >
    <h4
      className="c2"
    >
      The instance
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-conditional"
      role="group"
      style={undefined}
    >
      <div
        className="c4"
        disabled={false}
        width="4.125rem"
      >
        <select
          className="c5 c6"
          disabled={false}
          id="k"
          onBlur={undefined}
          width="4.125rem"
        >
          <option
            value="must"
          >
            must
          </option>
          <option
            value="should"
          >
            should
          </option>
        </select>
      </div>
    </div>
    <h4
      className="c2"
    >
      be on
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-placement"
      role="group"
      style={undefined}
    >
      <div
        className="c4"
        disabled={false}
        width="5.625rem"
      >
        <select
          className="c7 c8"
          disabled={false}
          id="l"
          onBlur={undefined}
          width="5.625rem"
        >
          <option
            value="same"
          >
            the same
          </option>
          <option
            value="different"
          >
            a different
          </option>
        </select>
      </div>
    </div>
    <h4
      className="c2"
    >
      node as the instance(s) identified by the
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-type"
      role="group"
      style={undefined}
    >
      <div
        className="c9"
        disabled={false}
        width="7.5rem"
      >
        <select
          className="c10 c11"
          disabled={false}
          id="m"
          onBlur={undefined}
          width="7.5rem"
        >
          <option
            value="name"
          >
            instance name
          </option>
          <option
            value="tag"
          >
            tag
          </option>
        </select>
      </div>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-name-pattern"
      role="group"
      style={undefined}
    >
      <div
        className="c12"
      >
        <div
          className="c4"
          disabled={false}
          width="7.5rem"
        >
          <select
            className="c10 c11"
            disabled={false}
            id="n"
            onBlur={undefined}
            width="7.5rem"
          >
            <option
              value="equalling"
            >
              equalling
            </option>
            <option
              value="not-equalling"
            >
              not equalling
            </option>
            <option
              value="containing"
            >
              containing
            </option>
            <option
              value="starting"
            >
              starting with
            </option>
            <option
              value="ending"
            >
              ending with
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-name"
      role="group"
      style={undefined}
    >
      <input
        className="c13"
        disabled={false}
        id="o"
        onBlur={null}
        placeholder="Example instance name: nginx"
        required={true}
      />
    </div>
  </div>
</div>
`;

exports[`renders <Rule/> without throwing 2`] = `
.c0 {
  margin-top: 0.5rem;
  margin-bottom: 2rem;
}

.c12 {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 4.125rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c7 {
  width: 5.625rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c10 {
  width: 7.5rem;
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
  width: auto;
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  color: rgb(216,216,216);
  margin: 0 0.375rem;
}

.c2 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  display: inline-block;
}

.c3 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c13 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c13::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:invalid {
  box-shadow: none;
}

.c13:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c13:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c13:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  min-width: 18.75rem;
  width: auto;
  margin: 0 0.375rem;
  min-width: 0;
}

.c4:after {
  content: '';
  width: 0.625rem;
  height: 0.625rem;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iOSIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgOSA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjx0aXRsZT5hcnJvdzogcmlnaHQ8L3RpdGxlPjxwYXRoIGQ9Ik05IDEuMzg2TDcuNjQ4IDAgNC41IDMuMjI4IDEuMzUyIDAgMCAxLjM4NiA0LjUgNnoiIGZpbGw9IiM0OTQ5NDkiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==) center center no-repeat;
  display: block;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.75rem;
}

.c4:after {
  right: 0.375rem;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  min-width: 18.75rem;
  width: auto;
  margin: 0 0.375rem;
  min-width: 0;
  margin-left: 0;
}

.c9:after {
  content: '';
  width: 0.625rem;
  height: 0.625rem;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iOSIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgOSA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjx0aXRsZT5hcnJvdzogcmlnaHQ8L3RpdGxlPjxwYXRoIGQ9Ik05IDEuMzg2TDcuNjQ4IDAgNC41IDMuMjI4IDEuMzUyIDAgMCAxLjM4NiA0LjUgNnoiIGZpbGw9IiM0OTQ5NDkiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==) center center no-repeat;
  display: block;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.75rem;
}

.c9:after {
  right: 0.375rem;
}

.c6 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 4.125rem;
  max-width: 4.125rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:invalid {
  box-shadow: none;
}

.c6:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c6:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c6:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c8 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 5.625rem;
  max-width: 5.625rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c8::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:invalid {
  box-shadow: none;
}

.c8:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c8:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c11 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  border: none;
  border-bottom: 0.0625rem solid rgba(73,73,73,1);
  border-radius: 0;
  background: transparent;
  padding: 0;
  padding-right: 0.75rem;
  display: inline;
  height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 0;
  max-width: 22.1875rem;
  width: 7.5rem;
  max-width: 7.5rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c11::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:invalid {
  box-shadow: none;
}

.c11:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c11:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c11:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    wrap={true}
  >
    <h4
      className="c2"
    >
      The instance
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-conditional"
      role="group"
      style={undefined}
    >
      <div
        className="c4"
        disabled={false}
        width="4.125rem"
      >
        <select
          className="c5 c6"
          disabled={false}
          id="p"
          onBlur={undefined}
          width="4.125rem"
        >
          <option
            value="must"
          >
            must
          </option>
          <option
            value="should"
          >
            should
          </option>
        </select>
      </div>
    </div>
    <h4
      className="c2"
    >
      be on
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-placement"
      role="group"
      style={undefined}
    >
      <div
        className="c4"
        disabled={false}
        width="5.625rem"
      >
        <select
          className="c7 c8"
          disabled={false}
          id="q"
          onBlur={undefined}
          width="5.625rem"
        >
          <option
            value="same"
          >
            the same
          </option>
          <option
            value="different"
          >
            a different
          </option>
        </select>
      </div>
    </div>
    <h4
      className="c2"
    >
      node as the instance(s) identified by the
    </h4>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-type"
      role="group"
      style={undefined}
    >
      <div
        className="c9"
        disabled={false}
        width="7.5rem"
      >
        <select
          className="c10 c11"
          disabled={false}
          id="r"
          onBlur={undefined}
          width="7.5rem"
        >
          <option
            value="name"
          >
            instance name
          </option>
          <option
            value="tag"
          >
            tag
          </option>
        </select>
      </div>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-name-pattern"
      role="group"
      style={undefined}
    >
      <div
        className="c12"
      >
        <div
          className="c4"
          disabled={false}
          width="7.5rem"
        >
          <select
            className="c10 c11"
            disabled={false}
            id="s"
            onBlur={undefined}
            width="7.5rem"
          >
            <option
              value="equalling"
            >
              equalling
            </option>
            <option
              value="not-equalling"
            >
              not equalling
            </option>
            <option
              value="containing"
            >
              containing
            </option>
            <option
              value="starting"
            >
              starting with
            </option>
            <option
              value="ending"
            >
              ending with
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="baseline-jVaZNU kXgQxt c3"
      name="rule-instance-name"
      role="group"
      style={undefined}
    >
      <input
        className="c13"
        disabled={false}
        id="t"
        onBlur={null}
        placeholder="Example instance name: nginx"
        required={true}
      />
    </div>
  </div>
</div>
`;
